Create some APIs testing with PHPUnit, implemented count functions for booking and order, implemented sum function and API route to track the amount of all orders, etc
